--- a/templates/rcb_captain.html
+++ b/templates/rcb_captain.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>hello, faf duplesis here</h1>
+    <a href="{% url 'RCB:rcb_team' %}">navigae to my team members</a>
     
 </body>
 </html>
