--- a/templates/rcb_team.html
+++ b/templates/rcb_team.html
@@ -5,10 +5,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-image: url("https://sportsganga.gumlet.io/wp-content/uploads/2023/03/image-9.png?compress=true&quality=80&w=640&dpr=2.6");
+           background-color: rgba(0, 0,0, 0.4);
+           
+            width: 100%;
+            background-size: cover;
+        }
+        header{
+            
+            text-align: center;
+            size: 20px;
+        }
+        div{
+            /* margin-top: 80px; */
+            text-align: center;
+            
+        }
+        li{
+            
+            padding:10px;
+            color: white;
+            font-size: medium;
+            list-style-type: none;
+            
+        }
+        a{
+            color:antiquewhite
+        }
+    </style>
 </head>
 <body>
-    <h1>virat kohli</h1>
-    <h1>dinesh karthik</h1>
-    <h1>lamroar</h1>
+    <header>WELCOME TO RCB</header>
+   <div>
+    <ul>
+        <li>virat kohli</li>
+        <li> Glen maxwell</li>
+        <li>Rajath patidar</li>
+        <li>dinesh karthik</li>
+        <li>Mahipal Lamroar</li>
+        <li>Suyash Prabhudessai</li>
+        <li>Harshal patel</li>
+        <li>Wanindu hasranga</li>
+        <li>Josh Hazelwood</li>
+        <li>Mohammed siraj</li>
+        <li>michael Brazewell</li>
+        <a href="{% url 'rcb_captain' %}">navigate to our captain page</a>
+
+
+        
+        
+        
+    </ul>
+</div>
 </body>
 </html>
